[package]
name = "dig-node-service"
# Inherits the workspace release version (root [workspace.package].version) so the
# produced `dig-node` binary, the tag-on-merge tag, and the version-increment gate
# all read ONE version from the root manifest (§2.4/§3.6). Bump it in Cargo.toml
# (root) per SemVer.
version.workspace = true
edition = "2021"
license = "MIT"
description = "The localhost DIG node OS-service binary (`dig-node`): a self-contained, cross-platform Rust binary installable as a Windows/Linux/macOS service. Wraps the canonical `dig-node` node library (the same node the native DIG Browser runs in-process) with an axum HTTP transport + control plane + CLI + OS-service registration, exposing the rpc.dig.net JSON-RPC contract (dig.getContent, dig.getAnchoredRoot, cache.*, control.*) on 127.0.0.1."
repository = "https://github.com/DIG-Network/dig-node"
readme = "../../README.md"
default-run = "dig-node"

# The produced binary keeps the canonical `dig-node` name (the dig-installer + apt
# packaging resolve `dig-node`; the release workflow builds `--bin dig-node`).
[[bin]]
name = "dig-node"
path = "src/main.rs"

# The service shell's own library (transport/control/CLI/meta). Named `dig_node_service`
# so it does not collide with the node library crate, which owns the `dig_node` name.
[lib]
name = "dig_node_service"
path = "src/lib.rs"

[dependencies]
# The canonical NODE engine library (crate `dig_node_core`) — a first-party sibling
# crate in this workspace (no longer a stale git-pinned digstore alias). It IS the
# rpc.dig.net-compatible node the native DIG Browser runs in-process (`handle_rpc`):
# local-first serve from cached .dig modules, blind ciphertext+proof proxy to the
# upstream on a miss, on-chain anchored-root resolution, chain-watch + subscriptions +
# generation gap-fill, the P2P stack, and the cache.* / control.* surface. This shell
# adds only the HTTP transport, control-plane auth, CLI, and OS-service registration
# around it, and produces the `dig-node` binary (distinct name from the engine lib).
dig-node-core = { path = "../dig-node-core" }

# The Sage-parity wallet engine (crate `dig_wallet`) — the node-custodied wallet DB + dual-transport
# dispatch + seed custody. This shell WIRES it into bring-up (#368): it builds one live
# `WalletBackend` (`sage::service::WalletService`) and serves the Sage method surface on the
# extension-reachable loopback (`POST /{method}`, 9778) + the mTLS 9257 listener, and bridges the
# bidirectional WS wallet+control transport (#369) onto it.
dig-wallet = { path = "../dig-wallet" }

# HTTP stack: the same axum/tokio the node itself uses, so there is one async runtime
# and one server framework across the node and the service shell. `ws` enables
# `axum::extract::ws` for the `GET /ws/status` liveness endpoint (#239).
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI + OS-service registration.
clap = { version = "4", features = ["derive"] }
# Cross-platform service manager: Windows SCM, Linux systemd, macOS launchd behind
# one API. User-level install where the platform allows it (per-user service),
# falling back to system-level with documented elevation.
service-manager = "0.7"

# HTTP client for the blind-passthrough fallback: dig_node::handle_rpc resolves the
# node's own method set (dig.getContent / dig.getAnchoredRoot / cache.* / dig.stage /
# the peer surface), returning "method not found" for everything else. This service
# relays those (e.g. dig.getProof, dig.listCapsules) verbatim to the upstream so it
# stays a correct transparent proxy. rustls-tls keeps the binary self-contained (no
# system OpenSSL), same as the node + store crates.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# `dig_constants::DIG_NODE_PORT` (§5.3) — the single-sourced canonical default localhost port
# for client→node connections; `config.rs`'s DEFAULT_PORT reads it rather than re-declaring the
# literal. Rev-PINNED deliberately, to a DISTINCT source from dig-node-core's own bare-git
# `dig-constants = { version = "0.2", git = "..." }` (which the P2P stack — dig-nat/dig-gossip/
# dig-dht/dig-onion — is release-ordered to stay on until 0.2.x reaches crates.io): a bare-git
# dependency has no `rev`, so cargo unifies EVERY bare-git reference to that URL into ONE
# resolved version, and ^0.2 + ^0.3 cannot both be satisfied by a single instance. Pinning this
# crate's dependency to the exact v0.3.0 commit makes it a cargo-DISTINCT source (a `rev`-pinned
# git dependency never unifies with a bare one, even at the identical commit), so this crate gets
# its own 0.3.0 instance without forcing dig-node-core's 0.2.x pin forward. Safe because the only
# thing crossing the boundary is a plain `u16` constant — the two instances never need to
# interoperate. Bump the `rev` (and the `version` req) when dig-node-core's own pin moves past
# 0.3.x and unification becomes possible again.
dig-constants = { version = "0.3", git = "https://github.com/DIG-Network/dig-constants", rev = "438ac8caf9ffb80cadd10362deacd63763a7f141" }

# Windows Service Control Protocol. service-manager only REGISTERS the service in the
# SCM; the binary the SCM launches must itself speak the service protocol
# (StartServiceCtrlDispatcher → report RUNNING/STOPPED) or the SCM kills it with error
# 1053 ("did not respond in a timely fashion"). The service's hidden `run-service`
# entrypoint uses this to be a real Windows service. (systemd/launchd exec the
# foreground process directly, so they need no equivalent.)
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

# Test-only WS client for the `GET /ws/status` integration tests (#239): connects
# over the wire and reads real frames, mirroring how `tests/server.rs` already
# exercises the HTTP surface with `reqwest` end-to-end rather than in-process.
[dev-dependencies]
tokio-tungstenite = "0.24"
futures-util = "0.3"
# The local plaintext content-serve integration test (#289, `tests/content_serve.rs`) compiles a real
# public `.dig` module and seeds it into the node's cache to exercise the `GET /s/...` surface
# end-to-end over HTTP. It builds the fixture with the SAME digstore stage/compile engine the node
# depends on, pinned to the SAME rev as dig-node-core's store-lib git deps (kept in lockstep).
digstore-stage = { git = "https://github.com/DIG-Network/digstore.git", rev = "099f88aecc63d767b392a1f70162a55b35023203" }
digstore-core = { git = "https://github.com/DIG-Network/digstore.git", rev = "099f88aecc63d767b392a1f70162a55b35023203" }
digstore-crypto = { git = "https://github.com/DIG-Network/digstore.git", rev = "099f88aecc63d767b392a1f70162a55b35023203" }
tempfile = "3"
# The verification-ledger fail-closed integration test (#307, `tests/content_serve.rs`) crafts a
# self-consistent Merkle proof whose root is NOT the requested (anchored) root and base64-encodes it
# into a mock `dig.getContent` window, so the node's RPC tier verifies-then-fails-closed and records
# the failed entry. `base64` matches dig-node-core's version.
base64 = "0.22"
