[package]
name = "dig-node-service"
# Inherits the workspace release version (root [workspace.package].version) so the
# produced `dig-node` binary, the nightly-release.yml tag, and the version-increment gate
# all read ONE version from the root manifest (┬د2.4/┬د3.6). Bump it in Cargo.toml
# (root) per SemVer.
version.workspace = true
edition = "2021"
license = "MIT"
description = "The localhost DIG node OS-service binary (`dig-node`): a self-contained, cross-platform Rust binary installable as a Windows/Linux/macOS service. Wraps the canonical `dig-node` node library (the same node the native DIG Browser runs in-process) with an axum HTTP transport + control plane + CLI + OS-service registration, exposing the rpc.dig.net JSON-RPC contract (dig.getContent, dig.getAnchoredRoot, cache.*, control.*) on 127.0.0.1."
repository = "https://github.com/DIG-Network/dig-node"
readme = "../../README.md"
default-run = "dig-node"

# The produced binary keeps the canonical `dig-node` name (the dig-installer + apt
# packaging resolve `dig-node`; the release workflow builds `--bin dig-node`).
[[bin]]
name = "dig-node"
path = "src/main.rs"

# `dign` ظ¤ a FIRST-CLASS alias binary for `dig-node` (issue #548), mirroring how `digs`
# aliases `digstore` (#434). It shares the SINGLE entrypoint `dig_node_service::run()`
# (see src/bin/dign.rs) so there is no duplicated logic; a build produces BOTH `dig-node`
# and `dign`, and each reflects its own invoked name in --help/--version. The release
# workflow publishes it alongside the primary as `dign-<ver>-<os_arch>[.exe]`.
[[bin]]
name = "dign"
path = "src/bin/dign.rs"

# A tiny stand-in for the REAL `dig-updater` beacon CLI (a separate repo/release, not
# vendored here), so the `updater.*` control-plane tests (#515) exercise a genuine child-
# process spawn ظ¤ argv, stdout/exit-code parsing ظ¤ without depending on that binary being
# installed on the test runner. Controlled entirely by env vars (see the fixture's own doc
# comment); never shipped (the release workflows build only `--bin dig-node`, ┬د2.4a).
#
# Deliberately named WITHOUT "update"/"install"/"setup"/"patch": Windows' installer-detection
# heuristic can require elevation to launch (or even just spawn via CreateProcess) an
# unmanifested `.exe` whose name matches those substrings (`ERROR_ELEVATION_REQUIRED`, 740) ظ¤
# hit empirically while developing #515 with a `fake_dig_updater` name. The REAL `dig-updater`
# binary name is the beacon repo's own choice and out of scope here; this fixture just avoids
# the trap for OUR test infra.
[[bin]]
name = "fake_beacon_cli"
path = "tests/fixtures/fake_beacon_cli.rs"

# The service shell's own library (transport/control/CLI/meta). Named `dig_node_service`
# so it does not collide with the node library crate, which owns the `dig_node` name.
[lib]
name = "dig_node_service"
path = "src/lib.rs"

[dependencies]
# The canonical NODE engine library (crate `dig_node_core`) ظ¤ a first-party sibling
# crate in this workspace (no longer a stale git-pinned digstore alias). It IS the
# rpc.dig.net-compatible node the native DIG Browser runs in-process (`handle_rpc`):
# local-first serve from cached .dig modules, blind ciphertext+proof proxy to the
# upstream on a miss, on-chain anchored-root resolution, chain-watch + subscriptions +
# generation gap-fill, the P2P stack, and the cache.* / control.* surface. This shell
# adds only the HTTP transport, control-plane auth, CLI, and OS-service registration
# around it, and produces the `dig-node` binary (distinct name from the engine lib).
dig-node-core = { path = "../dig-node-core" }

# The Sage-parity wallet engine (crate `dig_wallet`) ظ¤ the node-custodied wallet DB + dual-transport
# dispatch + seed custody. This shell WIRES it into bring-up (#368): it builds one live
# `WalletBackend` (`sage::service::WalletService`) and serves the Sage method surface on the
# extension-reachable loopback (`POST /{method}`, 9778) + the mTLS 9257 listener, and bridges the
# bidirectional WS wallet+control transport (#369) onto it.
dig-wallet = { path = "../dig-wallet" }

# HTTP stack: the same axum/tokio the node itself uses, so there is one async runtime
# and one server framework across the node and the service shell. `ws` enables
# `axum::extract::ws` for the `GET /ws/status` liveness endpoint (#239).
axum = { version = "0.7", features = ["ws"] }
# TLS-terminating server for the local HTTPS surface (`https://dig.local`, #624). Same
# crate + version dig-wallet already uses for the Sage-parity mTLS listener, so the node
# and service shell share one TLS-serving framework. Feeds it the `rustls::ServerConfig`
# dig-cert builds (its reloadable cert resolver) via `RustlsConfig::from_config`.
axum-server = { version = "0.7", features = ["tls-rustls"] }
# The single source of truth for DIG local-TLS material (#620/#622): the reloadable rustls
# loader + automatic leaf renewal for `https://dig.local`. PINNED to the released tag v0.1.0
# (never `main`) ظ¤ release-first (┬د4.1): the crate ships + releases before this consumer.
dig-cert = { git = "https://github.com/DIG-Network/dig-cert", tag = "v0.1.0" }
# The serving TLS stack ظ¤ pinned byte-identical to dig-cert / dig-node-core / dig-dns (0.23,
# default-features off, ring + std + tls12 + logging) so a build installs exactly ONE
# `CryptoProvider` (ring) and never hits the "multiple CryptoProviders" install panic (#622 ┬د7).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# Wall-clock `OffsetDateTime::now_utc()` for the daily leaf-renewal maintenance pass (#624).
time = { version = "0.3" }
# `process` backs the async `tokio::process::Command` the `updater` module (#515) spawns the
# `dig-updater` beacon CLI through ظ¤ a non-blocking child-process wait alongside the axum runtime.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "process"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Structured logging. The node's engine library (`dig_node_core`) and its transitive
# P2P/TLS stack emit `tracing` events; WITHOUT a subscriber installed here every one is
# silently dropped and a Windows-service run leaves no log at all. `dig-logging` is the
# shared building block (#547) that installs the dual sink ظ¤ a rolling JSONL file (per-OS
# machine log dir) + human stderr ظ¤ behind one reloadable level filter, and ships the
# reusable `logs` CLI verbs + the bundle-time redaction engine. Every DIG service binary
# gets logging from HERE rather than hand-rolling a subscriber. Sourced from crates.io (no
# git/path dep) per the ecosystem crates.io policy (#681).
dig-logging = "0.1"
# The logging facade the shell emits through. dig-node-core already depends on `tracing`;
# the service shell now emits its own bring-up/lifecycle events through it, captured by the
# `dig-logging` subscriber installed at the serve entrypoints.
tracing = "0.1"

# CLI + OS-service registration.
clap = { version = "4", features = ["derive"] }
# Cross-platform service manager: Windows SCM, Linux systemd, macOS launchd behind
# one API. User-level install where the platform allows it (per-user service),
# falling back to system-level with documented elevation.
service-manager = "0.7"

# HTTP client for the blind-passthrough fallback: dig_node::handle_rpc resolves the
# node's own method set (dig.getContent / dig.getAnchoredRoot / cache.* / dig.stage /
# the peer surface), returning "method not found" for everything else. This service
# relays those (e.g. dig.getProof, dig.listCapsules) verbatim to the upstream so it
# stays a correct transparent proxy. rustls-tls keeps the binary self-contained (no
# system OpenSSL), same as the node + store crates.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# The canonical DIG URN resolver (#668) ظ¤ the SAME node-first ┬د5.3 ladder + fail-closed
# verify + branded error assets the extension URN bar uses. `dign open` is a CLIENT
# operation (resolve+open a URN like any consumer), so this client-only dependency lives
# in the SERVICE shell's open-command path ONLY ظ¤ NEVER in dig-node-core (the server
# engine), where it would be the real dependency cycle. Depends on the PUBLISHED crates.io
# version (no git dep, #681); native feature (reqwest transport + blocking convenience).
dig-urn-resolver = "0.3.1"

# `dig_constants::DIG_NODE_PORT` (┬د5.3) ظ¤ the single-sourced canonical default localhost port
# for clientظْnode connections; `config.rs`'s DEFAULT_PORT reads it rather than re-declaring the
# literal. Rev-PINNED deliberately, to a DISTINCT source from dig-node-core's own bare-git
# `dig-constants = { version = "0.2", git = "..." }` (which the P2P stack ظ¤ dig-nat/dig-gossip/
# dig-dht/dig-onion ظ¤ is release-ordered to stay on until 0.2.x reaches crates.io): a bare-git
# dependency has no `rev`, so cargo unifies EVERY bare-git reference to that URL into ONE
# resolved version, and ^0.2 + ^0.3 cannot both be satisfied by a single instance. Pinning this
# crate's dependency to the exact v0.3.0 commit makes it a cargo-DISTINCT source (a `rev`-pinned
# git dependency never unifies with a bare one, even at the identical commit), so this crate gets
# its own 0.3.0 instance without forcing dig-node-core's 0.2.x pin forward. Safe because the only
# thing crossing the boundary is a plain `u16` constant ظ¤ the two instances never need to
# interoperate. Bump the `rev` (and the `version` req) when dig-node-core's own pin moves past
# 0.3.x and unification becomes possible again.
dig-constants = { version = "0.3", git = "https://github.com/DIG-Network/dig-constants", rev = "438ac8caf9ffb80cadd10362deacd63763a7f141" }

# Windows Service Control Protocol. service-manager only REGISTERS the service in the
# SCM; the binary the SCM launches must itself speak the service protocol
# (StartServiceCtrlDispatcher ظْ report RUNNING/STOPPED) or the SCM kills it with error
# 1053 ("did not respond in a timely fashion"). The service's hidden `run-service`
# entrypoint uses this to be a real Windows service. (systemd/launchd exec the
# foreground process directly, so they need no equivalent.)
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

# The install-root owner-SID probe (#565 LPE) reads the directory owner through the Win32 security
# API (`GetNamedSecurityInfoW` ظْ owner SID ظْ `ConvertSidToStringSidW`) instead of spawning a
# PowerShell owner query ظ¤ a bare-name spawn from the (attacker-writable) install root is itself the
# LPE this gate refuses (self_heal.rs). No process is launched.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
] }

# Test-only WS client for the `GET /ws/status` integration tests (#239): connects
# over the wire and reads real frames, mirroring how `tests/server.rs` already
# exercises the HTTP surface with `reqwest` end-to-end rather than in-process.
[dev-dependencies]
# Capturing subscriber for the never-log regression tests (#553 SPEC ┬د7): a `fmt` layer writing
# into an in-memory buffer so a test can assert emitted records never contain secret values.
# Pinned to the SAME 0.3 line `dig-logging` builds on, so exactly one `tracing-subscriber` resolves.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# `test-util` unlocks tokio's paused-clock test controls (`#[tokio::test(start_paused = true)]`,
# `tokio::time::advance`) so the self-heal per-child timeout (#693) and the TLS leaf-renewal
# missed-tick behaviour (#660) are tested deterministically without real waits.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
# The local plaintext content-serve integration test (#289, `tests/content_serve.rs`) compiles a real
# public `.dig` module and seeds it into the node's cache to exercise the `GET /s/...` surface
# end-to-end over HTTP. It builds the fixture with the SAME digstore stage/compile engine the node
# depends on, pinned to the SAME rev as dig-node-core's store-lib git deps (kept in lockstep).
digstore-stage = { git = "https://github.com/DIG-Network/digstore.git", rev = "099f88aecc63d767b392a1f70162a55b35023203" }
digstore-core = { git = "https://github.com/DIG-Network/digstore.git", rev = "099f88aecc63d767b392a1f70162a55b35023203" }
digstore-crypto = { git = "https://github.com/DIG-Network/digstore.git", rev = "099f88aecc63d767b392a1f70162a55b35023203" }
tempfile = "3"
# The verification-ledger fail-closed integration test (#307, `tests/content_serve.rs`) crafts a
# self-consistent Merkle proof whose root is NOT the requested (anchored) root and base64-encodes it
# into a mock `dig.getContent` window, so the node's RPC tier verifies-then-fails-closed and records
# the failed entry. `base64` matches dig-node-core's version.
base64 = "0.22"
