[package]
name = "dig-wallet"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
description = "DIG Browser built-in Chia wallet sidecar: a local axum server (using digstore-chain + chia-wallet-sdk over coinset.org) that serves a Sage-mirroring wallet UI. Native Rust so BLS signing works; the browser opens it at 127.0.0.1."

[lib]
name = "dig_wallet"
path = "src/lib.rs"

[[bin]]
name = "dig-wallet"
path = "src/main.rs"

[dependencies]
# Store-format libs from the digstore repo (git deps, pinned to the same rev as the
# node — bump together). digstore-chain: BIP-39 seed + HD wallet scan + DIG-CAT +
# encrypted seed storage + XCH send. digstore-core: the canonical Capsule
# (storeId:rootHash) identity rendered by /api/stores.
digstore-chain = { git = "https://github.com/DIG-Network/digstore.git", rev = "56664ec8c9b45969962b09c95148641c3534826e" }
digstore-core = { git = "https://github.com/DIG-Network/digstore.git", rev = "56664ec8c9b45969962b09c95148641c3534826e" }
# The node — same workspace now (the DIG Browser's in-process node + wallet are one
# host cluster). dig-wallet reads the node's cache surface for the wallet UI's
# "My Node" cache view (cache_cap_bytes / cache_used_bytes / clear_cache / list).
dig-node = { path = "../dig-node" }
chia-protocol = "0.26"
# `chia::puzzles::nft::NftMetadata` — the on-chain NFT metadata struct we serialize
# into a MintSpec's metadata Program for chia_mintNft / chia_bulkMintNfts.
chia = "0.26"
# Needed to NAME the SDK spendable `Cat` type when assembling a make-offer's
# MakerFunds, and `SpendContext` to serialize NFT metadata into a Program.
chia-wallet-sdk = { version = "0.30", features = ["offer-compression"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
# K1Pair — real secp256k1 test key pairs for the vault config / K1 pubkey parse tests.
chia-sdk-test = "0.30"
