[package]
name = "dig-wallet"
version = "0.8.0"
edition = "2021"
license = "GPL-2.0-only"
description = "DIG Browser built-in Chia wallet sidecar: a local axum server (using digstore-chain + chia-wallet-sdk over coinset.org) that serves a Sage-mirroring wallet UI. Native Rust so BLS signing works; the browser opens it at 127.0.0.1."

[lib]
name = "dig_wallet"
path = "src/lib.rs"

[[bin]]
name = "dig-wallet"
path = "src/main.rs"

[dependencies]
# Store-format libs from the digstore repo (git deps, pinned to the same rev as the
# node — bump together). digstore-chain: BIP-39 seed + HD wallet scan + DIG-CAT +
# encrypted seed storage + XCH send. digstore-core: the canonical Capsule
# (storeId:rootHash) identity rendered by /api/stores.
digstore-chain = { git = "https://github.com/DIG-Network/digstore.git", rev = "099f88aecc63d767b392a1f70162a55b35023203" }
digstore-core = { git = "https://github.com/DIG-Network/digstore.git", rev = "099f88aecc63d767b392a1f70162a55b35023203" }
# The node engine (crate `dig_node_core`) — same workspace (the DIG Browser's in-process
# node + wallet are one host cluster). dig-wallet reads the node's cache surface for the
# wallet UI's "My Node" cache view (cache_cap_bytes / cache_used_bytes / clear_cache / list).
dig-node-core = { path = "../dig-node-core" }
chia-protocol = "0.26"
# `chia::puzzles::nft::NftMetadata` — the on-chain NFT metadata struct we serialize
# into a MintSpec's metadata Program for chia_mintNft / chia_bulkMintNfts.
chia = "0.26"
# Needed to NAME the SDK spendable `Cat` type when assembling a make-offer's
# MakerFunds, and `SpendContext` to serialize NFT metadata into a Program.
chia-wallet-sdk = { version = "0.30", features = ["offer-compression"] }
# CLVM runtime types (NodePtr/Allocator) used by the #216 singleton reconstruction + spend
# builders. Pinned to the same 0.14 the SDK resolves so the NodePtr types unify.
clvmr = "0.14"
# Offer building (design A.5): the chia-wallet-sdk action system's `Spends::finish_with_keys`
# takes an ordered `IndexMap<Bytes32, PublicKey>` (owner ph -> signing key), as digstore-chain's
# offer builder does. Same crate the SDK resolves.
indexmap = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
zeroize = "1"

# -- #205 Sage-parity wallet RPC (§18) --------------------------------------------------
# Local wallet database (B.6): SQLite via sqlx, mirroring sage-wallet's relational store.
# `sqlite` bundles libsqlite3-sys (no system SQLite needed); runtime-tokio, no TLS (local
# file). We use the runtime `query()` API (NOT the compile-time `query!` macro) so the
# build needs no live DATABASE_URL; `macros` is only for `#[derive(FromRow)]`.
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros"] }
# Fallback tier (B.5): coinset.org + non-subscribing peer point-reads, reused AS-IS. Git
# dep (not path) so a standalone dig-node checkout builds it in CI.
chia-query = { git = "https://github.com/DIG-Network/chia-query.git", rev = "48f7f6521fcc109f6c935e56f96cb5a86da1ae22" }
# Dual transport (C.3): mTLS 9257 (Sage byte-parity) + plain-HTTP+CORS browser mirror.
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"
# -- #216 send/spend + singleton reconstruction (§18.9 → §18.8) -------------------------
# Pre-broadcast spend-bundle validation (C.6 fail-closed): validate_spend_bundle runs the
# bundle through chia-consensus before any peer broadcast. Same chia-* 0.26 / SDK 0.30 line
# as dig-wallet, so Coin/CoinSpend/SpendBundle unify across the crate boundary.
dig-clvm = { git = "https://github.com/DIG-Network/dig-clvm.git", rev = "356771034afd54a61d6199bc5960786139e39988" }
# Spend building (XCH/CAT), coin selection, signing, and NFT/DID/CAT singleton
# reconstruction all reuse the canonical `chia-wallet-sdk` driver constructors
# (SpendContext + StandardLayer + Cat::spend_all + the Nft/Did parsers) already depended on
# above — never hand-rolled CLVM (SYSTEM.md §4.1). NB: `dig-l1-wallet` (the C.2 reuse target
# for spend building) is not yet git-consumable — its `dig-keystore` path dependency does not
# resolve from a git checkout — so its thin SDK-wrapper builder pattern is followed directly
# on chia-wallet-sdk here; making dig-l1-wallet git-consumable is a tracked follow-up (#216).

# -- #205 PR4 (options/actions/themes/network-settings, SyncEvent stream, dig-keystore
# seed migration) -----------------------------------------------------------------------
# At-rest seed custody (design C.2, `seed_store` module): the `opaque` container (Argon2id +
# AES-256-GCM, versioned/magic-tagged/CRC-guarded) replaces the bespoke `digstore_chain::seed`
# on-disk layout for NEW writes; `seed_store::decrypt_seed` still reads old-format files.
# Published on crates.io (not a git dep) — the crate ships its library surface there.
dig-keystore = "0.3"
# The `SyncEvent` stream (design A.9): wraps the `tokio::sync::broadcast` receiver as a
# `Stream` for the SSE `GET /events` handler (`sage::transport`). `tokio-stream` supplies the
# `BroadcastStream` wrapper + `StreamExt` combinators; `futures-core` supplies the `Stream`
# trait itself (axum's `Sse<S>` is generic over it) — both tiny, no extra runtime.
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"

[dev-dependencies]
tempfile = "3"
# K1Pair — real secp256k1 test key pairs for the vault config / K1 pubkey parse tests.
chia-sdk-test = { version = "0.30", features = ["peer-simulator"] }
# Drive the axum Router transport-independently (oneshot) and read response bodies in
# the conformance + transport-parity tests.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
